# quicksilver

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  deny.toml  justfile  test_callback.js  test_for_await.js  test_forof2.js  test_inheritance.js  test_instanceof.js  test_rest.js  test_simple_class.js  test_spread.js  test_timers.js  test_url.js
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  test262.yml
benches/: runtime_benchmarks.rs
bindings/: README.md
bindings/c/: example.c  quicksilver.h
bindings/go/: quicksilver.go
bindings/python/: quicksilver.py
examples/: README.md  async_patterns.js  builtins_showcase.js  classes.js  fibonacci.js  hello_world.js  security_sandbox.js
examples/es_modules/: main.js  math.js  utils.js
playground/: index.html
scripts/: setup_dev_env.sh  test_all.sh
src/: error.rs  lib.rs  main.rs  prelude.rs
src/agent/: mod.rs
src/ai/: execution.rs  mod.rs
src/ast/: expr.rs  mod.rs  pattern.rs  stmt.rs
src/async_runtime/: mod.rs
src/bindings/: mod.rs
src/bytecode/: cache.rs  compiler.rs  mod.rs  opcode.rs  optimizer.rs
src/c_api/: mod.rs
src/concurrency/: mod.rs
src/coroutines/: mod.rs
src/debugger/: dap.rs  mod.rs  server.rs  sourcemap.rs  ui.rs
src/diagnostics/: mod.rs
src/distributed/: actors.rs  mod.rs
src/durable/: mod.rs  sqlite_backend.rs
src/edge/: mod.rs
src/effects/: mod.rs
src/event_loop/: mod.rs
src/ffi/: mod.rs  (+1 more)
tests/: async_modules_tests.rs  collections_types_tests.rs  core_language_tests.rs  data_structures_tests.rs  error_control_tests.rs  integration_tests.rs  modern_features_tests.rs  oop_tests.rs
(+73 files in other folders)
