[package]
name = "quicksilver"
version = "0.1.0"
edition = "2021"
description = "A memory-safe JavaScript runtime written in Rust"
license = "MIT"
repository = "https://github.com/anthropics/quicksilver"
homepage = "https://github.com/anthropics/quicksilver"
documentation = "https://docs.rs/quicksilver"
readme = "README.md"
authors = ["Quicksilver Contributors"]
keywords = ["javascript", "runtime", "interpreter", "ecmascript"]
categories = ["compilers", "wasm"]

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Unicode support for JS identifiers
unicode-xid = "0.2"

# Number parsing (for JS number literals)
lexical-core = "1.0"

# String interning for performance
string-interner = "0.17"

# Fast hash map (used by rustc)
rustc-hash = "2.0"

# Arena allocation for AST nodes
typed-arena = "2.0"

# Bit manipulation for bytecode
bitflags = "2.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation (for Math.random)
rand = "0.8"

# BigInt support
num-bigint = "0.4"
num-traits = "0.2"

# Regex support (for RegExp)
regex = "1.10"

# Binary serialization (for snapshots, HMR)
bincode = "1.3"

# REPL with readline support
rustyline = { version = "14.0", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.0"
criterion = "0.5"
tempfile = "3.10"

[[bin]]
name = "quicksilver"
path = "src/main.rs"

[[bench]]
name = "runtime_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
